# gmail-prom-exporter-rs

./: Cargo.toml  Dockerfile
src/: auth.rs  mail.rs  main.rs
