[package]
name = "gmail-prom-exporter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
tokio = { version = "1", features = ["full"] }

metrics = { version = "^0.21" }
metrics-util = { version = "^0.15", default-features = false, features = [
  "recency",
  "registry",
  "summary",
] }
metrics-exporter-prometheus = "0.12.1"
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json"] }
clap = { version = "4.5.21", features = ["derive"] }
mailparse = { version = "0.15.0" }
